--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-05 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: yy0zz, 2021-2025\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -3664,7 +3664,7 @@ msgstr "^K2Você não pode entrar numa equipe maior!"
 #: qcsrc/common/notifications/all.inc:462
 #: qcsrc/common/notifications/all.inc:821
 msgid "^K2You're not allowed to join that team!"
-msgstr ""
+msgstr "^K2Você não pode entrar nessa equipe!"
 
 #: qcsrc/common/notifications/all.inc:463
 #: qcsrc/common/notifications/all.inc:822
@@ -4663,6 +4663,8 @@ msgid ""
 "^K2Your ping (connection latency) is currently too high to play here.\n"
 "Please consider joining a server closer to you."
 msgstr ""
+"^K2Seu ping (latência de conexão) é alto demais para jogar aqui.\n"
+"Por favor, considere entrar em um servidor mais próximo de você."
 
 #: qcsrc/common/notifications/all.inc:731
 msgid "^BGYou're queued to join any available team."
@@ -4996,7 +4998,7 @@ msgstr "^K1Cometendo suicídio em ^COUNT"
 
 #: qcsrc/common/notifications/all.inc:819
 msgid "^K2Your current team choice seems fine."
-msgstr ""
+msgstr "^K2Sua escolha atual de equipe parece boa."
 
 #: qcsrc/common/notifications/all.inc:825
 msgid "^F4Timeout begins in ^COUNT"
@@ -7269,12 +7271,14 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_strafehud.qc:123
 msgid "W-turn:"
-msgstr ""
+msgstr "W-virar:"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_strafehud.qc:124
 msgid ""
 "Indicator on the angle to aim at when W-turning to rotate as fast as possible"
 msgstr ""
+"Indicador no ângulo ao qual se deve apontar ao W-virar para rotacionar o "
+"mais rápido possível"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_strafehud.qc:128
 msgid "Best angle:"
